# chatgpt_telegram

./: .gitignore  README.md  config.example.json  pyproject.toml
bots/: __main__.py  api.py  app.py  config.py  log.py  utils.py
bots/applications/: __init__.py  _base.py  bingchat.py  echo.py  gpt.py
bots/utils/: __init__.py  fastapi.py  pydantic.py
chatgpt_bots/: bingchat.py  gpt.py
public/: index.html
static/: main.css  main.js
