[tool.poetry]
name = "chatgpt_bots"
version = "0.1.0"
description = ""
authors = ["Nachtalb <na@nachtalb.io>"]
readme = "README.md"
packages = [{include = "chatgpt_bots"}]

[tool.poetry.dependencies]
python = "^3.11.0, <3.12.0"
bot-manager = {git = "https://github.com/Nachtalb/bot_manager.git", rev = "master"}
openai = "^0.27.2"
edgegpt = "^0.1.10.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = {extras = ["black"], version = "^8.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
preview = true
